# pd-edge-waf

./: .gitignore  Cargo.toml  NOTICE  README.md
.cargo/: config.toml
config/: MODSECURITY-RECOMMENDED.conf
plans/: 2026-07-15-native-waf-execution-plan.md
rules/: directives.json  engine.rss  engine_bundle.rss  engine_context.rss  engine_operators.rss  engine_text.rss  manifest.json  modsecurity_recommended.rss  native_plan.json  pd_edge_waf.rss  request_901_initialization.rss  request_905_common_exceptions.rss  request_911_method_enforcement.rss  request_913_scanner_detection.rss  request_920_protocol_enforcement.rss  request_921_protocol_attack.rss  request_922_multipart_attack.rss  request_930_application_attack_lfi.rss  request_931_application_attack_rfi.rss  request_932_application_attack_rce.rss  request_933_application_attack_php.rss  request_934_application_attack_generic.rss  request_941_application_attack_xss.rss  request_942_application_attack_sqli.rss  request_943_application_attack_session_fixation.rss  request_944_application_attack_java.rss  request_949_blocking_evaluation.rss  request_999_common_exceptions_after.rss  response_950_data_leakages.rss  response_951_data_leakages_sql.rss  response_952_data_leakages_java.rss  response_953_data_leakages_php.rss  response_954_data_leakages_iis.rss  response_955_web_shells.rss  response_956_data_leakages_ruby.rss  response_959_blocking_evaluation.rss  response_980_correlation.rss  ruleset.rss  ruleset_bundle.rss
src/: lib.rs  native.rs
tests/: e2e.rs  jit_segfault_repro.rs  native_perf.rs  native_plan.rs  (+4 more)
(+5 files in other folders)
