[package]
name = "pd-edge-waf"
version = "0.1.0"
edition = "2024"
description = "OWASP CRS rules translated into split RustScript modules for pd-edge"
license = "Apache-2.0"
repository = "https://github.com/rustscript-lang/pd-edge-waf"
publish = false

[dependencies]
pd-vm = { version = "0.22.6", default-features = false, features = ["runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
