[package]
name = "pd-edge-waf"
version = "0.1.0"
edition = "2024"
description = "OWASP CRS rules translated into split RustScript modules for pd-edge"
license = "Apache-2.0"
repository = "https://github.com/rustscript-lang/pd-edge-waf"
publish = false

[dependencies]
pd-vm = { path = "../rustscript", default-features = false, features = ["runtime", "cranelift-jit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
axum = "0.8"
edge = { package = "pd-edge", path = "../pd-edge" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
